Fix wrong text align for image preview caption

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -128,7 +128,7 @@ figcaption {
   text-align: left;
   padding: (0.5 * $small-font-size) 0;
 
-  &.thumbnail {
+  &.preview {
     text-align: right;
   }
 }
